<resources>
    <string name="app_name">Rito</string>
    <string name="user">Usuario</string>
    <string name="psw">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="newUser">No tienes cuenta?</string>
    <string name="forgot">Olvidaste la contraseña?</string>
    <string name="signup">Registrate</string>
    <string name="email">Correo Electrónico</string>
    <string name="date">Día/Mes/Año</string>
    <string name="or">O inicia con:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings adicionales para agregar a strings.xml -->
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="hello_blank_fragment">HolaaMundo\n</string>

    <string name="web_client_id">958572653746-45orh3vrdd8nh8tee4ubvso9c7bkjnp0.apps.googleusercontent.com</string>
<!--    <string name="web_client_id">40690879576-a7mtqkucu3mkje6k498880u32h5311vg.apps.googleusercontent.com</string>-->


</resources>