<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView

        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/riotrenovologo"
        android:id="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.098"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0" android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:boxStrokeColor="@color/riotRed" android:textColorHint="@color/black" app:hintTextColor="@color/riotRed"
        app:layout_constraintBottom_toTopOf="@+id/tf2">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et1"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tf1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.441"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tf2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/psw"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/riotRed"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/riotRed"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tf2"
            app:layout_constraintVertical_bias="0.441" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/forgotButton"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginTop="-20dp"
        android:text="@string/forgot"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="#989898" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintTop_toBottomOf="@+id/tf2"/>
    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/riotRed" app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="44dp"
        app:layout_constraintVertical_bias="0.589" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        style="?attr/materialIconButtonFilledStyle"
        android:id="@+id/iconButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logInApple"
        app:icon="@drawable/applelogo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.159"/>

    <Button
        style="?attr/materialIconButtonFilledStyle"
        android:id="@+id/iconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logInMeta"
        app:icon="@drawable/_90cf22777d30e344cf5d8abfdd79321"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintVertical_bias="0.159"/>

    <Button
        style="?attr/materialIconButtonFilledStyle"
        android:id="@+id/iconButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logInGoogle"
        app:icon="@drawable/d7295b771c863e71c08bc0daea6c0498"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintHorizontal_bias="0.314"

        app:layout_constraintVertical_bias="0.159"/>
    <TextView
        android:text="@string/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/iconButton3" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="116dp"
        android:textColor="#888888" app:layout_constraintVertical_bias="0.152"
        app:layout_constraintEnd_toStartOf="@+id/textButton" app:layout_constraintHorizontal_bias="0.875"/>
    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/textButton"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@+id/iconButton3"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.072"
        android:textColor="#2D56A9" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.71"/>
    <TextView
        android:text="@string/or"
        android:textAlignment="center"
        android:layout_width="123dp"
        android:layout_height="28dp" android:id="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0"/>
</FrameLayout>