<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.RegisterFragment">

    <TextView
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp" app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.116"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintVertical_bias="0.241">

        <ImageView

            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="Imagen usuario"
            app:srcCompat="@drawable/profileicon"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf1"
            android:layout_height="wrap_content"
            android:hint="@string/user"

            android:layout_width="200dp"
            app:boxStrokeColor="@color/riotRed" android:textColorHint="@color/black"
            app:hintTextColor="@color/riotRed"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.5">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et1"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tf1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.5"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf2"
        android:layout_height="wrap_content"
        android:hint="@string/email" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.411"
        app:layout_constraintHorizontal_bias="0.494"

        android:layout_width="320dp"
        app:boxStrokeColor="@color/riotRed" android:textColorHint="@color/black" app:hintTextColor="@color/riotRed"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et2"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tf1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.441"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/psw" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.542"
        app:layout_constraintHorizontal_bias="0.494"

        android:layout_width="320dp"
        app:boxStrokeColor="@color/riotRed" android:textColorHint="@color/black" app:hintTextColor="@color/riotRed"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et3"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tf1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.441"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/date" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.673"
        app:layout_constraintHorizontal_bias="0.494"

        android:layout_width="320dp"
        app:boxStrokeColor="@color/riotRed" android:textColorHint="@color/black" app:hintTextColor="@color/riotRed"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et4"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tf1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.441"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:text="Registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/riotRed" app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="44dp"
        app:layout_constraintVertical_bias="0.79" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        style="?attr/materialIconButtonFilledStyle"
        android:id="@+id/iconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logInMeta"
        app:icon="@drawable/_90cf22777d30e344cf5d8abfdd79321"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintVertical_bias="0.92" app:layout_constraintTop_toTopOf="parent"/>
    <Button
        style="?attr/materialIconButtonFilledStyle"
        android:id="@+id/iconButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logInGoogle"
        app:icon="@drawable/d7295b771c863e71c08bc0daea6c0498"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.619"

        app:layout_constraintVertical_bias="0.92" app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>